--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
-    "agora-rtc-sdk-ng": "^4.24.0",
-    "agora-token": "^2.0.5",
+    "@types/peerjs": "^0.0.30",
     "firebase": "^10.7.1",
+    "peerjs": "^1.5.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
